# coreservicelib

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  config.yaml.example  dockerBuild.sh  dockerRun.sh  pyproject.toml  pytest.ini  updateVersion.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ci/: ci.yml
core_service_lib/: __init__.py  app.py  config.py  core.py  logger.py
docs/source/: conf.py  index.rst  usage.rst
features/core_service_lib/: config.feature  logger.feature  service.feature
reports/: index.html
tests/: .pylintrc  config.yaml.good  conftest.py
tests/fixtures/: common.py  config_test.py  logger_test.py  service_test.py
